tests/type/errors/bad_arith_operands.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
	var x = 1 + true;
}

scene main
{
}
